fix(java8): restore JDK 8 compatibility by removing Java 9–11 APIs (#12)
* fix(java8): restore JDK 8 compatibility by removing Java 9–11 APIs

- ContractLoader: replace Optional.isEmpty() with !isPresent().
- DocumentProcessingResult:
  - replace List.copyOf(...) with new ArrayList<>(...) defensive copy.
  - replace List.of() with Collections.emptyList().
  - keep immutability via Collections.unmodifiableList(new ArrayList<>(...)).
- No behavioral changes; only API substitutions for JDK 8.

* test(java8): replace Path.of/Files.readString with JDK 8 equivalents

- Use Paths.get and Files.readAllBytes + StandardCharsets.UTF_8 in ContractMappingIntegrationTest.
- Removes Java 11 APIs to restore test compilation on JDK 8.
- No behavioral changes.